--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>guestbook Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-
+	<prerequisites>
+		<maven>3.2.1</maven>
+	</prerequisites>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.5</maven.compiler.source>
@@ -124,8 +126,20 @@
 	</dependencies>
 
 	<build>
+		<testResources>
+			<testResource>
+				<directory>src/test/java</directory>
+				<includes>
+					<include>**/*.feature</include>
+				</includes>
+			</testResource>
+		</testResources>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>2.6</version>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
